welcome.lessons.welcome.bat.bool2.DateFashion.scala.error
dateFashion:3: error: ';' expected but integer literal found.
  if (you>=8 || date>=7) {return 2}8
                                   ^