welcome.lessons.welcome.bat.bool2.DateFashion.scala.code
def dateFashion(you:Int, date:Int):Int = {
  if (you<=2 || date<=2) {return 0}
  if (you>=8 || date>=7) {return 2}8
  else {return 1}
}